--- a/nginx/templates/deployment.yaml
+++ b/nginx/templates/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ .Chart.Name }}
+  namespace: argocd
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
@@ -18,4 +19,3 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - containerPort: 80
-
